# DESTNetwork

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  heroku.yaml  heroku.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: db.py  dependencies.py  main.py
backend/app/consumers/: base_consumer.py  campaign_consumer.py  campaign_created.py  main_consumer.py  test_consumer.py
backend/app/mocks/: create_blockchain_base_stash_campaign.py  init_mock_items.py
backend/app/models/: __init__.py  description.py  dispute.py  image.py  photo.py  stash_campaign.py  submission.py  verification_request.py
backend/app/schemas/: description.py  stash_campaign.py  submission.py  verification_request.py
backend/app/views/: description.py  photo.py  stash_campaign.py  submission.py  verification_request.py
backend/migrations/: env.py
backend/migrations/versions/: 12ccd0d0acdf_move_reward_to_bigint.py  167d7d2c1277_add_resolved_flag.py  47e5903b3116_add_necessary_tables_columns.py  4ca8842af3d8_add_dispution_description.py  52e751f3e657_add_submission_and_verification_tables.py  5ade8e7f9a37_init.py  c12206259610_move_reward_to_string.py  c606a956a9c7_add_stash_campaign_table.py  dd7aa459598b_add_photos_table.py  f2603f00da1f_remove_some_fields.py
contracts/destnet/: README.md  foundry.toml
front/: .firebaserc  package-lock.json  package.json  tailwind.config.js
front/app/: layout.tsx  page.tsx
front/components/: Block.tsx  ProgressModal.tsx  VerifyWallet.tsx  hero-svg.tsx  icons.tsx  isWorldIdVerified.tsx  navbar.tsx  (+1 more)
(+85 files in other folders)
