[tool.poetry]
name = "dest-backend"
version = "0.1.0"
description = "Backend for Decentralized Stash application"
authors = ["Dzmitry Ivanou <dimiv007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
