[tool.poetry]
name = "dest-backend"
version = "0.1.0"
description = "Backend for Decentralized Stash application"
authors = ["Dzmitry Ivanou <dimiv007@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
geoalchemy2 = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
